--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__harm_u2p_util.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__harm_u2p_util.ipynb
@@ -116,7 +116,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../src/harm_u2p_util.c\n"
+      "Overwriting ../src/harm_u2p_util.c\n"
      ]
     }
    ],
@@ -555,17 +555,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-10-10 20:08:41--  https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/src/harm_u2p_util.c\r\n",
-      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.0, 18.205.93.1, 18.205.93.2\r\n",
-      "Connecting to bitbucket.org (bitbucket.org)|18.205.93.0|:443... connected.\r\n",
-      "HTTP request sent, awaiting response... 200 OK\r\n",
-      "Length: 9696 (9.5K) [text/plain]\r\n",
-      "Saving to: ‘../src/harm_u2p_util-original.c’\r\n",
-      "\r\n",
-      "../src/harm_u2p_uti 100%[===================>]   9.47K  --.-KB/s    in 0s      \r\n",
-      "\r\n",
-      "2019-10-10 20:08:41 (62.5 MB/s) - ‘../src/harm_u2p_util-original.c’ saved [9696/9696]\r\n",
-      "\r\n",
       "Validation test for harm_u2p_util.c: FAILED!\n",
       "Diff:\n",
       "28,29d27\n",
@@ -800,9 +789,9 @@
       "> \n",
       ">   /* Compute the pressure as a function of rho_b (rho0) and\n",
       ">    * u = rho_b * eps, using our hybrid EOS:\n",
-      ">    *  -------------------------------------------------------------\n",
+      ">    * .-------------------------------------------------------------.\n",
       ">    * | p(rho_b,u) = P_cold + (Gamma_th - 1)*(u - rho_b * eps_cold) |\n",
-      ">    *  -------------------------------------------------------------\n",
+      ">    * .-------------------------------------------------------------.\n",
       ">    */\n",
       ">   return( P_cold + (Gamma_th - 1.0)*(u - rho0*eps_cold) );\n",
       "> \n",
@@ -909,144 +898,14 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__harm_u2p_util.ipynb to latex\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "[NbConvertApp] Writing 82353 bytes to Tutorial-IllinoisGRMHD__harm_u2p_util.tex\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\r\n",
+      "[NbConvertApp] Writing 61010 bytes to Tutorial-IllinoisGRMHD__harm_u2p_util.tex\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n"
      ]
@@ -1078,7 +937,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.16"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
