--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__symmetry__set_gzs_staggered_gfs.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD__symmetry__set_gzs_staggered_gfs.ipynb
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ../src/symmetry__set_gzs_staggered_gfs.C\n"
+      "Overwriting ../src/symmetry__set_gzs_staggered_gfs.C\n"
      ]
     }
    ],
@@ -204,17 +204,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2019-10-10 20:09:51--  https://bitbucket.org/zach_etienne/wvuthorns/raw/5611b2f0b17135538c9d9d17c7da062abe0401b6/IllinoisGRMHD/src/symmetry__set_gzs_staggered_gfs.C\r\n",
-      "Resolving bitbucket.org (bitbucket.org)... 18.205.93.1, 18.205.93.0, 18.205.93.2\r\n",
-      "Connecting to bitbucket.org (bitbucket.org)|18.205.93.1|:443... connected.\r\n",
-      "HTTP request sent, awaiting response... 200 OK\r\n",
-      "Length: 2752 (2.7K) [text/plain]\r\n",
-      "Saving to: ‘../src/symmetry__set_gzs_staggered_gfs-original.C’\r\n",
-      "\r\n",
-      "../src/symmetry__se 100%[===================>]   2.69K  --.-KB/s    in 0s      \r\n",
-      "\r\n",
-      "2019-10-10 20:09:51 (131 MB/s) - ‘../src/symmetry__set_gzs_staggered_gfs-original.C’ saved [2752/2752]\r\n",
-      "\r\n",
       "Validation test for symmetry__set_gzs_staggered_gfs.C: PASSED!\n"
      ]
     }
@@ -289,84 +278,14 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-IllinoisGRMHD__symmetry__set_gzs_staggered_gfs.ipynb to latex\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "/Users/werneck/anaconda3/lib/python3.7/site-packages/nbconvert/utils/pandoc.py:52: RuntimeWarning: You are using an unsupported version of pandoc (2.2.3.2).\r\n",
-      "Your version must be at least (1.12.1) but less than (2.0.0).\r\n",
-      "Refer to http://pandoc.org/installing.html.\r\n",
-      "Continuing with doubts...\r\n",
-      "  check_pandoc_version()\r\n",
-      "[NbConvertApp] Writing 46510 bytes to Tutorial-IllinoisGRMHD__symmetry__set_gzs_staggered_gfs.tex\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\r\n",
+      "[NbConvertApp] Writing 38935 bytes to Tutorial-IllinoisGRMHD__symmetry__set_gzs_staggered_gfs.tex\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.19 (TeX Live 2018) (preloaded format=pdflatex)\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
       " restricted \\write18 enabled.\r\n",
       "entering extended mode\r\n"
      ]
@@ -398,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.16"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
